[gd_scene load_steps=5 format=3 uid="uid://ljnbxyyh7di6"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_2ouwx"]
[ext_resource type="Resource" uid="uid://dm7ay2g51lui1" path="res://sfx/game_start.tres" id="2_arek7"]
[ext_resource type="Texture2D" uid="uid://csvupkuu18wgv" path="res://assets/bad_logo.aseprite" id="3_1gwg5"]
[ext_resource type="SpriteFrames" uid="uid://c1oxc4txsk1cn" path="res://entities/critters/bnnuy/sprites/bnnuy.aseprite" id="4_f8ori"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ouwx")
game_start_sound = ExtResource("2_arek7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -50.5
offset_right = 48.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_1gwg5")

[node name="ButtonsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartGameBtn" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Start Game"

[node name="ExitBtn" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Exit"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(32, 232)
sprite_frames = ExtResource("4_f8ori")
animation = &"Eepy"
autoplay = "Eepy"
speed_scale = 0.85

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(77, 232)
sprite_frames = ExtResource("4_f8ori")
animation = &"Eepy"
autoplay = "Eepy"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="."]
position = Vector2(164, 232)
sprite_frames = ExtResource("4_f8ori")
animation = &"Eepy"
autoplay = "Eepy"
speed_scale = 1.1
flip_h = true

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="."]
position = Vector2(243, 232)
sprite_frames = ExtResource("4_f8ori")
animation = &"Eepy"
autoplay = "Eepy"
speed_scale = 0.7

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="."]
position = Vector2(304, 232)
sprite_frames = ExtResource("4_f8ori")
animation = &"Eepy"
autoplay = "Eepy"
speed_scale = 0.9
flip_h = true

[connection signal="pressed" from="VBoxContainer/ButtonsContainer/StartGameBtn" to="." method="_on_start_game_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
